Add image elements to the anchor element

--- a/links-and-images/pages/about.html
+++ b/links-and-images/pages/about.html
@@ -7,5 +7,10 @@
 
   <body>
     <h1>About Page</h1>
+    <img
+      src="../images/dog.jpg"
+      alt="Pug in a sweater with a yellow background"
+      height="310"
+      width="">
   </body>
 </html>
