Add link to blog2.html and image

--- a/blog2.html
+++ b/blog2.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Blog Article</title>
+    <title>Blog #2 Article</title>
   </head>
   <body>
     <h1>Blanditiis Maximequo Gazette</h1>
@@ -25,11 +25,6 @@
       optio voluptatem nesciunt ex nemo totam in eaque sequi. Ea minus
       similique impedit mollitia debitis dolorem.
     </p>
-    <img
-      src="https://images.surferseo.art/4aeb703f-46ee-4d3a-9401-84aec20587df.png"
-      alt="Ancient Roman public toilets with men talking and defacating."
-      height="400"
-    />
     <p>
       Dolor ipsam eum harum numquam, possimus itaque. Necessitatibus
       ipsum eius est cum labore sit fugit! Dolore cum, aspernatur
@@ -43,7 +38,10 @@
     <p>
       <em
         >Hic autem
-        <a href="blog2.html" target="_blank" rel="noopener noreferrer"
+        <a
+          href="http://www.google.com"
+          target="_blank"
+          rel="noopener noreferrer"
           >illum aspernatur.</a
         >
         Assumenda vel, nihil quia dolores labore explicabo.</em
