File structure update. Add blog-website/

--- a/blog-website/index.html
+++ b/blog-website/index.html
@@ -43,7 +43,7 @@
     <p>
       <em
         >Hic autem
-        <a href="blog2.html" target="_blank" rel="noopener noreferrer"
+        <a href="blog-two.html" target="_blank" rel="noopener noreferrer"
           >illum aspernatur.</a
         >
         Assumenda vel, nihil quia dolores labore explicabo.</em
