--- a/links-and-images/index.html
+++ b/links-and-images/index.html
@@ -14,6 +14,7 @@
 
     <h1>Homepage</h1>
     <a href="./pages/about.html">About</a>
+    <a href="./pages/images.html">Images</a>
 
   </body>
 </html>
